# bevy_2delight_layers

./: Cargo.toml  README.md
assets/platformer/: bg.aseprite  fg.aseprite  light.aseprite
examples/platformer/: light_setup.rs  main.rs  physics_setup.rs
src/: consts.rs  lib.rs  parallax.rs  plugin.rs  utils.rs
src/camera/: camera_shake.rs  mod.rs
src/layer/: layer_defns.rs  mod.rs
src/light/: light_alloc.rs  light_cutout_mat.rs  light_interaction.rs  light_man.rs  light_mat.rs  mod.rs
